Increase main top padding to stop header overlap

--- a/components/Layout/Layout.module.css
+++ b/components/Layout/Layout.module.css
@@ -28,5 +28,5 @@
   width: 100%;
 }
 .main {
-  padding-top: 3rem;
+  padding-top: 5rem;
 }
